RESOLVED FIXED90609
[EFL] [WK2] Ecore errors from ecore_evas_screen_geometry_get()
https://bugs.webkit.org/show_bug.cgi?id=90609
Summary [EFL] [WK2] Ecore errors from ecore_evas_screen_geometry_get()
Sudarsana Nagineni (babu)
Reported 2012-07-05 06:55:31 PDT
WebKitBuild/Release/bin/MiniBrowser http://maps.google.com ERR<18368>:ecore ecore.c:474 _ecore_magic_fail() *** ECORE ERROR: Ecore Magic Check Failed!!! *** IN FUNCTION: ecore_evas_screen_geometry_get() ERR<18368>:ecore ecore.c:476 _ecore_magic_fail() Input handle pointer is NULL! ERR<18368>:ecore ecore.c:487 _ecore_magic_fail() *** NAUGHTY PROGRAMMER!!! *** SPANK SPANK SPANK!!! *** Now go fix your code. Tut tut tut! ERR<18368>:ecore ecore.c:474 _ecore_magic_fail() *** ECORE ERROR: Ecore Magic Check Failed!!! *** IN FUNCTION: ecore_evas_screen_geometry_get() ERR<18368>:ecore ecore.c:476 _ecore_magic_fail() Input handle pointer is NULL! ERR<18368>:ecore ecore.c:487 _ecore_magic_fail() *** NAUGHTY PROGRAMMER!!! *** SPANK SPANK SPANK!!! *** Now go fix your code. Tut tut tut! ERR<18368>:ecore ecore.c:474 _ecore_magic_fail() *** ECORE ERROR: Ecore Magic Check Failed!!! *** IN FUNCTION: ecore_evas_screen_geometry_get() ERR<18368>:ecore ecore.c:476 _ecore_magic_fail() Input handle pointer is NULL! ERR<18368>:ecore ecore.c:487 _ecore_magic_fail() *** NAUGHTY PROGRAMMER!!! *** SPANK SPANK SPANK!!! *** Now go fix your code. Tut tut tut!
Attachments
Patch (1.27 KB, patch)
2012-07-05 08:06 PDT, Sudarsana Nagineni (babu)
no flags
Sudarsana Nagineni (babu)
Comment 1 2012-07-05 08:06:16 PDT
Created attachment 150939 [details] Patch Somehow I missed fixing this in r121752.
WebKit Review Bot
Comment 2 2012-07-09 12:25:33 PDT
Comment on attachment 150939 [details] Patch Clearing flags on attachment: 150939 Committed r122134: <http://trac.webkit.org/changeset/122134>
WebKit Review Bot
Comment 3 2012-07-09 12:25:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.