[EFL] [WK2] Ecore errors from ecore_evas_screen_geometry_get() https://bugs.webkit.org/show_bug.cgi?id=90609

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-07-09
Reviewed by Daniel Bates.

Do not call ecore_evas_screen_geometry_get() if ecoreEvas is null.

No new tests. This patch doesn't change behavior.

* platform/efl/PlatformScreenEfl.cpp:
(WebCore::screenRect): Early return if Evas is null.

Canonical link: https://commits.webkit.org/108637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122134 268f45cc-cd09-0410-ab3c-d52691b4dbfc